# satysfi-arrows

./: CHANGELOG.md  README.md  Satyristes  satysfi-arrows-doc.opam  satysfi-arrows.opam
.github/workflows/: build.yml
__test__/: README.md  regression.test.js  test.saty
docs/: examples.saty  manual.saty
src/: arrows.satyh  body.satyh  commands.satyh  head-tail.satyh  head.satyh  metadata.satyg  tail.satyh  types.satyg
src/lib/: interval.satyg  point.satyh
